objects/Session_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Session Milestones</relationshipLabel>
        <relationshipName>Session_Milestones</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Session Milestones</relationshipLabel>
        <relationshipName>Session_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Session Milestone</label>
    <nameField>
        <displayFormat>SSM-{0000}</displayFormat>
        <label>Session Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>